Fixes: NB#277582 - While no operator name is displayed but WLAN is active there's a gap between the signal strength and network type indicators
RevBy: Anssi Eteläniemi

--- a/themes/style/statusarea.css
+++ b/themes/style/statusarea.css
@@ -156,7 +156,7 @@ StatusIndicatorLabelStyle {
     padding-right: 0;
     padding-top: 0;
     padding-bottom: 0;
-    minimum-size: 0, -1;
+    minimum-size: 0 -1;
     text-elide: true;
     word-wrap: false;
 }
@@ -172,7 +172,7 @@ MLabelStyle#StatusIndicatorLabel {
     padding-right: 0;
     padding-top: 0;
     padding-bottom: 0;
-    minimum-size: 0, -1;
+    minimum-size: 0 -1;
     maximum-size: 30.0mm -1;
 }
 
@@ -187,7 +187,7 @@ MLabelStyle#StatusIndicatorLabelLandscape {
     padding-right: 0;
     padding-top: 0;
     padding-bottom: 0;
-    minimum-size: 0, -1;
+    minimum-size: 0 -1;
     maximum-size: 55.0mm -1;
 }
 
@@ -202,7 +202,7 @@ MLabelStyle#StatusIndicatorLabelPortrait {
     padding-right: 0;
     padding-top: 0;
     padding-bottom: 0;
-    minimum-size: 0, -1;
+    minimum-size: 0 -1;
     maximum-size: 30.0mm -1;
 }
 
